[package]
name = "enum_properties"
version = "0.3.0"
description = "A macro for declaring static properties on enum variants"
authors = ["cofinite"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/cofinite/enum_properties"
readme = "README.md"
keywords = ["enum", "macro", "static"]
categories = ["no-std", "rust-patterns"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies.lazy_static]
version = "1.4"
optional = true


[[example]]
name = "basic_usage_lazy"
required-features = ["lazy_static"]

[[example]]
name = "with_all_features_lazy"
required-features = ["lazy_static"]

[[example]]
name = "non_const_lazy"
required-features = ["lazy_static"]